--- a/docker/Views/app/student.cshtml
+++ b/docker/Views/app/student.cshtml
@@ -169,7 +169,7 @@
                     });
                 }
                 else{
-                    _self.message = '请先选择要管理的校园';
+                    _self.message = '请先选择要管理的校园（';
                     _self.total = 0;
                     _self.index = 0;
                     _self.rows = [];
