--- a/docker/Views/charge/retainer.cshtml
+++ b/docker/Views/charge/retainer.cshtml
@@ -32,8 +32,8 @@
                 </template>
             </el-table-column>
             <el-table-column align="left" label="备注" property="remarks">></el-table-column>
+            <el-table-column width="140" align="center" label="缴费时间" property="paytime"></el-table-column>
             <el-table-column width="140" align="center" label="录入时间" property="create"></el-table-column>
-            <el-table-column width="140" align="center" label="缴费时间" property="create"></el-table-column>
             <el-table-column width="150" align="center" label="操作">
                 <template scope="scope">
                     <el-button size="small" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1 && scope.row.payid">查看缴费单据</el-button>
