--- a/docker/Views/charge/feescale.cshtml
+++ b/docker/Views/charge/feescale.cshtml
@@ -101,10 +101,10 @@
                 emptyPager.editer = false;
                 emptyPager.delrow = false;
                 $.getJSON('/organ', { 'do': val });
-                $.getJSON('/right', { 'do': 'editer', organ: val, code: 'FeeScale' }, function (rlt) {
+                $.getJSON('/auth', { organ: val, code: 'School_FeeScale' }, function (rlt) {
                     emptyPager.editer = rlt.success;
                 })
-                $.getJSON('/right', { 'do': 'delete', organ: val, code: 'FeeScale' }, function (rlt) {
+                $.getJSON('/auth', { organ: val, code: 'School_FeeScale' }, function (rlt) {
                     emptyPager.delrow = rlt.success;
                 })
                 this.refresh();
