--- a/docker/Views/_master.cshtml
+++ b/docker/Views/_master.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Wlniao.i</title>
-    <link rel="stylesheet" href="@ViewBag.iHost/oem/style.css" />
+    <link rel="stylesheet" href="@ViewBag.iHost/xcenter.css" />
     <link rel="stylesheet" href="@ViewBag.iHost/vue/2.5.3/element-ui/lib/theme-default/index.css" />
     <link rel="stylesheet" href="@ViewBag.iHost/vue/2.5.3/element-ui/el-xcenter.css" />
     <script type="text/javascript" src="@ViewBag.iHost/jquery/2.1.1/jquery.min.js"></script>
