--- a/docker/Views/charge/feeorder.cshtml
+++ b/docker/Views/charge/feeorder.cshtml
@@ -28,7 +28,7 @@
                 <el-table-column width="130" align="center" label="@Html.Raw(ViewBag.Label_studentid)" property="studentid"></el-table-column>
                 <el-table-column width="100" align="center" label="姓名" property="studentname"></el-table-column>
                 <el-table-column width="110" align="center" label="生成时间" property="create"></el-table-column>
-                <el-table-column width="90" align="right" label="应缴">
+                <el-table-column width="100" align="right" label="应缴">
                     <template scope="scope">
                         <el-popover trigger="hover" placement="right">
                             <p>总金额: {{ scope.row.fullprice }}</p>
@@ -47,19 +47,16 @@
                 <el-table-column width="90" align="right" label="实缴" property="paid"></el-table-column>
                 <el-table-column width="100" align="center" label="微信推送">
                     <template scope="scope">
-                        <el-button size="small" @@click="wxpush(scope.row.id)" type="success" v-if="scope.row.ispay > 0">已缴费</el-button>
-                        <el-button size="small" @@click="wxpush(scope.row.id)" type="success" v-else-if="scope.row.pushstate===3">已推送</el-button>
-                        <el-button size="small" @@click="wxpush(scope.row.id)" type="warning" v-else-if="scope.row.pushstate===2" title="已屏蔽或取消关注等原因会造成推送失败">推送失败</el-button>
-                        <el-button size="small" @@click="wxpush(scope.row.id)" type="gray" title="点击重新推送" v-else-if="scope.row.pushstate===1">未绑定</el-button>
-                        <el-button size="small" @@click="wxpush(scope.row.id)" type="info" title="点击重新推送" v-else>未推送</el-button>
+                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="success" v-if="scope.row.ispay > 0">已缴费</el-button>
+                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="success" v-else-if="scope.row.pushstate===3">已推送</el-button>
+                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="warning" v-else-if="scope.row.pushstate===2" title="已屏蔽或取消关注等原因会造成推送失败">推送失败</el-button>
+                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="gray" title="点击重新推送" v-else-if="scope.row.pushstate===1">未绑定</el-button>
+                        <el-button size="mini" @@click="wxpush(scope.row.id)" type="info" title="点击重新推送" v-else>未推送</el-button>
                     </template>
                 </el-table-column>
                 <el-table-column align="center" label="操作">
                     <template scope="scope">
-                        <el-button size="small" @@click="location.href='/viewer?id=' + scope.row.id" type="info">明细</el-button>
-                        <el-button size="small" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1">查看缴费单据</el-button>
-                        <el-button size="small" @@click="topay(scope.row.id)" type="success" v-if="scope.row.ispay === 0">缴费</el-button>
-                        <el-button size="small" @@click="handleDelete(scope.row)" type="warning" v-if="scope.row.ispay === 0">删除</el-button>
+                        <el-button size="mini" @@click="location.href='/viewer?id=' + scope.row.id" type="info">明细</el-button><el-button size="mini" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1">查看缴费单据</el-button><el-button size="mini" @@click="topay(scope.row.id)" type="success" v-if="scope.row.ispay === 0">缴费</el-button><el-button size="mini" @@click="handleDelete(scope.row)" type="warning" v-if="scope.row.ispay === 0">删除</el-button>
                     </template>
                 </el-table-column>
             </el-table>
