--- a/docker/Views/charge/feeorder.cshtml
+++ b/docker/Views/charge/feeorder.cshtml
@@ -44,7 +44,7 @@
                         <el-tag type="gray" v-else>待支付</el-tag>
                     </template>
                 </el-table-column>
-                <el-table-column width="90" align="right" label="实缴" property="paid"></el-table-column>
+                <el-table-column width="100" align="right" label="实缴" property="paid"></el-table-column>
                 <el-table-column width="100" align="center" label="微信推送">
                     <template scope="scope">
                         <el-button size="mini" @@click="wxpush(scope.row.id)" type="success" v-if="scope.row.ispay > 0">已缴费</el-button>
@@ -56,7 +56,10 @@
                 </el-table-column>
                 <el-table-column align="center" label="操作">
                     <template scope="scope">
-                        <el-button size="mini" @@click="location.href='/viewer?id=' + scope.row.id" type="info">明细</el-button><el-button size="mini" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1">查看缴费单据</el-button><el-button size="mini" @@click="topay(scope.row.id)" type="success" v-if="scope.row.ispay === 0">缴费</el-button><el-button size="mini" @@click="handleDelete(scope.row)" type="warning" v-if="scope.row.ispay === 0">删除</el-button>
+                        <el-button size="mini" @@click="location.href='/viewer?id=' + scope.row.id" type="info">明细</el-button>
+                        <el-button size="mini" @@click="toticket(scope.row.payid)" v-if="scope.row.ispay === 1">查看缴费单据</el-button>
+                        <el-button size="mini" @@click="topay(scope.row.id)" type="success" v-if="scope.row.ispay === 0">缴费</el-button>
+                        <el-button size="mini" @@click="handleDelete(scope.row)" type="warning" v-if="scope.row.ispay === 0">删除</el-button>
                     </template>
                 </el-table-column>
             </el-table>
