--- a/docker/Views/wx/index.cshtml
+++ b/docker/Views/wx/index.cshtml
@@ -3,7 +3,7 @@
 }
 @section body{
     <div style="width:100%;height:100%;overflow-x:hidden;">
-        <iframe src="@ViewBag.UCenter" frameborder="0" scrolling="auto" width="100%" height="100%"></iframe>
+        <iframe src="@ViewBag.UCenter" frameborder="0" scrolling="auto" style="width:100%;height:100%;" width="100%" height="100%"></iframe>
     </div>
 }
 @section script{
