--- a/docker/Views/_master.cshtml
+++ b/docker/Views/_master.cshtml
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>Wlniao.i</title>
     <link rel="stylesheet" href="@ViewBag.iHost/xcenter.css" />
-    <link rel="stylesheet" href="@ViewBag.iHost/vue/2.5.3/element-ui/lib/theme-default/index.css" />
-    <link rel="stylesheet" href="@ViewBag.iHost/vue/2.5.3/element-ui/el-xcenter.css" />
+    <link rel="stylesheet" href="@ViewBag.iHost/vue/element-ui/theme-chalk/index.css" />
+    <link rel="stylesheet" href="@ViewBag.iHost/vue/el-xcenter.css" />
     <script type="text/javascript" src="@ViewBag.iHost/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="@ViewBag.iHost/vue/2.5.3/vue.min.js"></script>
-    <script type="text/javascript" src="@ViewBag.iHost/vue/2.5.3/vue-router.js"></script>
-    <script type="text/javascript" src="@ViewBag.iHost/vue/2.5.3/vue-xcenter.js"></script>
-    <script type="text/javascript" src="@ViewBag.iHost/vue/2.5.3/element-ui/lib/index.js"></script>
+    <script type="text/javascript" src="@ViewBag.iHost/vue/vue.min.js"></script>
+    <script type="text/javascript" src="@ViewBag.iHost/vue/vue-router.js"></script>
+    <script type="text/javascript" src="@ViewBag.iHost/vue/vue-xcenter.js"></script>
+    <script type="text/javascript" src="@ViewBag.iHost/vue/element-ui/index.js"></script>
     <script type="text/javascript" src="@ViewBag.iHost/iconfont/iconfont.js"></script>
     <script type="text/javascript" src="@ViewBag.iHost/jsapi.js"></script>
     <style>
