--- a/docker/Views/school/student.cshtml
+++ b/docker/Views/school/student.cshtml
@@ -44,7 +44,7 @@
             <el-table-column width="90" align="center" label="年级" property="gradename"></el-table-column>
             <el-table-column width="120" align="center" label="班级" property="classname"></el-table-column>
             <el-table-column label="备注" property="remarks"></el-table-column>
-            <el-table-column width="180" align="center" label="操作">
+            <el-table-column width="270" align="center" label="操作">
                 <template scope="scope">
                     <el-popover ref="fee" placement="left" width="360">
                         <p>请为<font style="color:#FF5722;padding:0px 3px;">{{ scope.row.name }}</font>选择要执行的操作：</p>
@@ -68,9 +68,9 @@
                             </el-tooltip>
                         </div>
                     </el-popover>
+                    <el-button size="mini" @@click="handleEditer(scope.row)">查看</el-button>
                     <el-button size="mini" @@click="handleEditer(scope.row)" type="success" v-if="editer">编辑</el-button>
-                    <el-button size="mini" @@click="handleEditer(scope.row)" v-popover:fee type="primary" v-else>查看</el-button>
-                    <el-button size="mini" v-popover:fee type="warning" v-if="editer">更多操作</el-button>
+                    <el-button size="mini" v-popover:fee type="warning">更多</el-button>
                 </template>
             </el-table-column>
         </el-table>
